<resources>
    <string name="app_name">Anda</string>

    <!--공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

    <!--메뉴-->
    <string name="menu_home">홈</string>
    <string name="menu_event">이벤트</string>
    <string name="menu_map">지도</string>
    <string name="menu_dictionary">안과백과</string>
    <string name="menu_mypage">마이페이지</string>

    <!--    홈-->
    <string name="home_info_lasek">#라섹 리뷰 모아보기</string>
    <string name="home_info_lasik">#라식 리뷰 모아보기</string>
    <string name="home_info_ophthalmology">#안과 진료 리뷰 모아보기</string>
    <string name="home_info_top_ophthalmology1">#내 주변</string>
    <string name="home_info_top_ophthalmology2">Top 병원(별점 순)</string>


    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>
    <string name="login_find_id">아이디 비밀번호 찾기</string>

    <!-- 회원가입 -->
    <string name="signup">회원가입</string>
    <string name="signup_info">가입을 통해 안다의 다양한 해택을 함께 누려보세요!</string>
    <string name="signup_id_hint">아이디(이메일)</string>
    <string name="signup_lastId_hint">anda.com</string>
    <string name="signup_password_hint">비밀번호</string>
    <string name="signup_password_confirm_hint">비밀번호 재입력</string>
    <string name="signup_realName_hint">이름</string>
    <string name="signup_nickName_hint">닉네임</string>
    <string name="signup_phoneNumber_hint">휴대폰 번호</string>
    <string name="signup_dateOfBirth_hint">생년월일</string>
    <string name="signup_recommander_hint">추천인</string>
    <string name="signup_email_delimiter">\@</string>


    <string name="find_id">아이디 찾기</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="find_id_put_nickname_hint">닉네임을 입력해주세요.</string>
    <string name="find_id_put_email_hint">이메일을 입력해주세요.</string>

    <string name="dictionary_title">안과백과</string>
    <string name="dictionary_info">안과계 백과사전, ~~\n이런식으로 설명쓰면 좋을거 같아요</string>
    <string name="dictionary_symptom">증상\n카테고리</string>
    <string name="dictionary_operation">수술\n지식</string>
    <string name="dictionary_recommend_ophthalmology">안과\n추천</string>




    <!--    증상 카테고리-->
    <string name="dictionary_symptom_title">about 眼</string>

    <!--    수술 추천-->
    <string name="dictionary_operation_title">about 교정술</string>

    <!--    안과추천-->
    <string name="dictionary_recommend_ophthalmology_title">부작용 예방 방법</string>

</resources>