<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:title="@string/menu_home"
        android:icon="@drawable/selector_navi_home"/>
    <item
        android:id="@+id/eventFragment"
        android:enabled="true"
        android:title="@string/menu_event"
        android:icon="@drawable/selector_navi_search"/>

    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:title="@string/menu_map"
        android:icon="@color/black"/>

    <item
        android:id="@+id/dictionaryFragment"
        android:enabled="true"
        android:title="@string/dictionary_title"
        android:icon="@drawable/selector_navi_match"/>
    <item
        android:id="@+id/mypageFragment"
        android:enabled="true"
        android:title="@string/menu_mypage"
        android:icon="@drawable/selector_navi_mypage"/>
</menu>
