<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dictionary_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dictionary_dictionary_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="50dp"/>
    <TextView
        android:id="@+id/dictionary_dictionary_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_info"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dictionary_dictionary_tv"
        android:layout_marginTop="20sp"/>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dictionary_symptom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dictionary_symptom_btn"
        android:layout_marginTop="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dictionary_operation_btn"
        app:layout_constraintTop_toBottomOf="@id/dictionary_dictionary_info_tv"/>
    <TextView
        android:id="@+id/dictionary_symptom_info_tv"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_symptom"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/dictionary_symptom_btn"
        app:layout_constraintEnd_toEndOf="@id/dictionary_symptom_btn"
        app:layout_constraintTop_toTopOf="@id/dictionary_symptom_btn"
        app:layout_constraintBottom_toBottomOf="@id/dictionary_symptom_btn"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dictionary_operation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dictionary_operation_btn"
        android:layout_marginTop="50sp"
        app:layout_constraintStart_toEndOf="@id/dictionary_symptom_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dictionary_dictionary_info_tv"/>
    <TextView
        android:id="@+id/dictionary_operation_info_tv"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_operation"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/dictionary_operation_btn"
        app:layout_constraintEnd_toEndOf="@id/dictionary_operation_btn"
        app:layout_constraintTop_toTopOf="@id/dictionary_operation_btn"
        app:layout_constraintBottom_toBottomOf="@id/dictionary_operation_btn"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dictionary_recommend_ophthalmology_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dictionary_recommend_ophthalmology"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dictionary_nothing_btn"
        app:layout_constraintTop_toBottomOf="@id/dictionary_symptom_btn"/>

    <TextView
        android:id="@+id/dictionary_recommend_ophthalmology_info_tv"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_recommend_ophthalmology"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/dictionary_recommend_ophthalmology_btn"
        app:layout_constraintEnd_toEndOf="@id/dictionary_recommend_ophthalmology_btn"
        app:layout_constraintTop_toTopOf="@id/dictionary_recommend_ophthalmology_btn"
        app:layout_constraintBottom_toBottomOf="@id/dictionary_recommend_ophthalmology_btn"/>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dictionary_nothing_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dictionary_nothing"
        app:layout_constraintStart_toEndOf="@id/dictionary_recommend_ophthalmology_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dictionary_operation_btn"/>







</androidx.constraintlayout.widget.ConstraintLayout>