<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <EditText
        android:id="@+id/find_id_put_nickName_et"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_common"
        android:hint="@string/find_id_put_nickname_hint"
        android:paddingStart="10sp"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@null"/>

    <View
        android:id="@+id/find_id_put_nickName_view"
        android:layout_width="0dp"
        android:layout_height="2px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/find_id_put_nickName_et"
        app:layout_constraintStart_toStartOf="@+id/find_id_put_nickName_et"
        app:layout_constraintTop_toBottomOf="@+id/find_id_put_nickName_et" />

    <TextView
        android:id="@+id/find_id_put_nickName_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/form_error"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_id_put_nickName_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_id_find_id_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@color/login_button"
        android:text="@string/find_id"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_id_put_nickName_error_tv" />

    <TextView
        android:id="@+id/login_find_pwd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/find_pwd"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/find_id_find_id_btn"
        app:layout_constraintTop_toBottomOf="@+id/find_id_find_id_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>