<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up_sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_up_sign_up_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/signup_info"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_up_sign_up_tv" />


    <!--실명 입력창-->
    <!--<EditText
        android:id="@+id/sign_up_realName_et"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_realName_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_sign_up_info_tv" />-->
    <!--실명 입력창 언더바-->
    <!--<View
        android:id="@+id/sign_up_realName_underscore_view"
        android:layout_width="150dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_realName_et" />-->

    <ImageView
        android:id="@+id/sign_up_back_iv"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/ic_back"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


<!--아이디 입력창-->
    <EditText
        android:id="@+id/sign_up_id_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_id_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_at_sign_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_sign_up_info_tv"/>
<!--아이디 입력창 언더바-->
    <View
        android:id="@+id/sign_up_id_underscore_view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_id_et"
        app:layout_constraintStart_toStartOf="@+id/sign_up_id_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_id_et" />
<!--@-->
    <TextView
        android:id="@+id/sign_up_at_sign_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_email_delimiter"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_id_et"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_sign_up_tv"
        app:layout_constraintStart_toStartOf="@+id/sign_up_sign_up_tv"
        app:layout_constraintTop_toTopOf="@+id/sign_up_id_et" />
<!--이메일 뒤쪽-->
    <EditText
        android:id="@+id/sign_up_direct_input_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_lastId_hint"
        android:inputType="textWebEmailAddress"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_id_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_up_at_sign_tv"
        app:layout_constraintTop_toTopOf="@+id/sign_up_at_sign_tv" />
<!--이메일 뒤쪽 언더바-->
    <View
        android:id="@+id/sign_up_address_underscore_view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_direct_input_et"
        app:layout_constraintStart_toStartOf="@+id/sign_up_direct_input_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_direct_input_et" />

    <!--비밀번호 입력창-->
    <EditText
        android:id="@+id/sign_up_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_password_hint"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_address_underscore_view" />
    <!--비밀번호 입력창 언더바-->
    <View
        android:id="@+id/sign_up_password_underscore_view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_password_et"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_et" />

    <!--비밀번호 확인 입력창-->
    <EditText
        android:id="@+id/sign_up_password_check_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_password_confirm_hint"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_underscore_view" />
    <!--비밀번호 확인 입력창 언더바-->
    <View
        android:id="@+id/sign_up_password_check_underscore_view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_password_check_et"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_check_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_check_et" />

    <!--휴대폰번호 입력창-->
    <!--<EditText
        android:id="@+id/sign_up_phoneNumber_et"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_phoneNumber_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_check_underscore_view" />
    <!-휴대폰번호 입력창 언더바-->
    <!--<View
        android:id="@+id/sign_up_phoneNumber_underscore_view"
        android:layout_width="150dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_phoneNumber_et" />-->

    <!--닉네임 입력창-->
    <EditText
        android:id="@+id/sign_up_nickName_et"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_nickName_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_check_underscore_view" />
    <!--닉네임 입력창 언더바-->
    <View
        android:id="@+id/sign_up_name_underscore_view"
        android:layout_width="150dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_nickName_et" />
    <!--닉네임 중복 확인 버튼-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_overlap_btn"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:background="@color/login_button"
        android:text="@string/signup_overlap_hint"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_up_nickName_et" />


    <!--생년월일 입력창-->
    <!--<EditText
        android:id="@+id/sign_up_dateOfBirth_et"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_dateOfBirth_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name_underscore_view" />-->
    <!--생년월일 입력창 언더바-->
    <!--<View
        android:id="@+id/sign_up_dateOfBirth_underscore_view"
        android:layout_width="150dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_dateOfBirth_et" />-->

    <!--추천인 입력창-->
    <EditText
        android:id="@+id/sign_up_recommander_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@null"
        android:background="@null"
        android:hint="@string/signup_recommander_hint"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name_underscore_view" />
    <!--추천인 입력창 언더바-->
    <View
        android:id="@+id/sign_up_recommander_underscore_view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_password_et"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_recommander_et" />

    <TextView
        android:id="@+id/sign_up_email_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/form_error"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_id_underscore_view" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/login_button"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_recommander_underscore_view" />

    <ProgressBar
        android:id="@+id/sign_up_loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>