<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="@null"
        android:background="@null"
        android:inputType="text"
        android:text="로그인"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/login_anda_logo_iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/img_app_logo"
        android:src="@drawable/splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_id_et"
        android:layout_width="0dp"
        android:layout_height="44sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_common"
        android:hint="@string/login_id_hint"
        android:paddingStart="10sp"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_anda_logo_iv"
        android:autofillHints="@null"/>


    <View
        android:id="@+id/login_id_underscore_view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintEnd_toEndOf="@+id/login_id_et"
        app:layout_constraintStart_toStartOf="@+id/login_id_et"
        app:layout_constraintTop_toBottomOf="@+id/login_id_et" />


    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="0dp"
        android:layout_height="44sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_common"
        android:hint="@string/signup_password_hint"
        android:paddingStart="10sp"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id_underscore_view"
        android:autofillHints="@null"/>

    <View
        android:id="@+id/login_password_underscore_view"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#a8a8a8"
        app:layout_constraintEnd_toEndOf="@+id/login_password_et"
        app:layout_constraintStart_toStartOf="@+id/login_password_et"
        app:layout_constraintTop_toBottomOf="@+id/login_password_et" />

    <TextView
        android:id="@+id/login_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/form_error"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_underscore_view" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/login_stay_img"
        app:layout_constraintStart_toStartOf="@+id/login_password_underscore_view"
        app:layout_constraintTop_toBottomOf="@+id/login_password_underscore_view"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="44sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:background="@color/login_button"
        android:textColor="@color/black"
        android:text="로그인"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_error_tv" />

    <TextView
        android:id="@+id/login_sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_signup"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_in_btn" />

    <TextView
        android:id="@+id/login_find_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_find_id"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/login_sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_in_btn" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:src="@drawable/login_ez_start2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"/>

    <ProgressBar
        android:id="@+id/login_loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>